--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="crime_title_hint">Title</string>
     <string name="crime_solved_label">Solved</string>
+    <string name="date_picker_title">Date of crime:</string>
 </resources>
